--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,111 @@
 .App {
   text-align: center;
+  border: 15px solid grey
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+.home{
+  border: 15px solid brown;
+  /* display: flex;
+  flex-direction: column;
+  justify-content: center */
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.book-list{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: right;
+  margin: 3%;
+  width: 100%
+}
+
+.home{
+  /* display: flex; */
+  justify-content: center
+}
+
+.thumb{
+  border: 1px solid black;
+  background-color: #90909038;
+  width: 40%;
+  height: 300px;
+  margin-bottom: 5%;
+  margin-right: 5%;
+  margin-left: 5%;
+}
+
+
+.thumb-head{
+  width: 100%;
+  height: 25%;
+  background-color: #909090;
+  color: white;
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  font-size: 25px;
+  justify-content: space-between
+}
+
+.thumb-body{
+    display: flex;
+    flex-direction: row;
+    flex: 3;
+    height: 100%;
+    overflow-y: hidden;
+}
+
+.thumb-body div{
+  width: 45%;
+  justify-content: space-between;
+}
+
+.thumb-body .left{
+  width: 50%;
+  height: 75%;
+  /* background-color: purple; */
+}
+
+.thumb-body .right{
+  width: 50%;
+  height: 75%;
+  display: flex;
+  flex-direction: column
+}
+
+.links{
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.blurb{
+  color:#707070;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-size: 20px;
+  /* width: 100%; */
+  background-color: green;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.amazon{
+  font-size: 30px;
+  color: #909090;
 }
+
+.author{
+  font-style: italic;
+}
+
+.image-container{
+  border-right: 2px black;
+  width: 50%;
+  height: 248px;
+  align-items: left
+}
+
+.thumb img{
+  padding-right: 4%;
+  width: 65%;
+  /* position: relative */
+}
+
+/* .thumb-right{
+  width: 100%
+} */
